# paradown

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
benches/: download_bench.rs
docs/: install-and-usage.md  multi-protocol-architecture.md  multi-protocol-roadmap.md  p2p-open-source-options.md  performance-tuning.md  project-analysis.md  refactor-plan.md  release-policy.md
examples/: config.toml  urls.txt
packaging/homebrew/: paradown.rb
packaging/scoop/: paradown.json
scripts/: build-release.sh  generate-sbom.sh  profile-memory.sh  sign-release.sh  soak-http.sh
src/: checksum.rs  chunk.rs  cli.rs  config.rs  coordinator_events.rs  coordinator_queue.rs  coordinator_registry.rs  diagnostics.rs  download.rs  error.rs  events.rs  job_finalize.rs  job_prepare.rs  job_state.rs  job_storage.rs  job_workers.rs  lib.rs  main.rs  manager.rs  persistence.rs  progress.rs  protocol_probe.rs  rate_limiter.rs  recovery.rs  repository.rs  request.rs  runtime.rs  stats.rs  status.rs  storage.rs  storage_mapping.rs  task.rs  worker.rs  worker_runtime.rs  worker_transfer.rs
src/cli_app/: commands.rs  mod.rs  render.rs
src/coordinator/: events.rs  mod.rs  queue.rs  registry.rs
src/discovery/: mod.rs  origin.rs
src/domain/: http.rs  manifest.rs  mod.rs  piece.rs  session.rs  source.rs  spec.rs
tests/: cli_multi_task_integration.rs  http_metadata_integration.rs  http_resume_integration.rs  http_session_integration.rs  runtime_integration.rs  runtime_resilience_integration.rs
(+36 files in other folders)
