[package]
name = "paradown"
version = "0.1.0"
edition = "2024"
authors = ["liulipeng <pengliliu8086@gmail.com>"]
description = "A multi-threaded download manager with resume capability"
license = "MIT"
repository = "https://github.com/llp/paradown"
documentation = "https://github.com/llp/paradown/blob/main/README.md"
readme = "README.md"
keywords = ["download", "http", "multi-threaded", "downloader"]
categories = ["network-programming", "asynchronous"]

[dependencies]
indicatif = { version = "0.17", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli"] }
tokio = { version = "1", features = ["full", "time"] }
rand = "0.8"

thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
bytesize = "1.1"
serde_json = "1.0"
url = "2.5"
dashmap = "5.4"
futures = "0.3.31"
#
md-5 = "0.10"
sha1 = "0.10.6"
sha2 = "0.10.9"
digest = "0.10"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
humantime = "2.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"

[[bench]]
name = "download_bench"
harness = false

[lib]
name = "paradown"
path = "src/lib.rs"

[[bin]]
name = "paradown"
path = "src/main.rs"

